🚀 CRITICAL FIX: Resolve 405 errors and performance issues in production
✅ Fixed Issues:
1. CORS Configuration - Updated with actual frontend domains
2. Image Upload API - Fixed relative URL issue causing 405 errors
3. Performance Optimization - Added database connection pooling and caching
4. Production Environment - Added missing CORS_ALLOWED_ORIGINS env var
5. API Service - Added proper uploadImage method with error handling

🔧 Technical Changes:
- Updated SecurityConfig with specific allowed origins
- Fixed dashboard.jsx to use apiService.uploadImage() instead of direct fetch
- Added Spring Cache annotations to ProductService methods
- Enhanced production database configuration with HikariCP settings
- Added comprehensive test utilities for debugging

🎯 Expected Results:
- Users can now successfully list products without 405 errors
- Faster page loading with improved caching
- Better error handling and debugging capabilities
- Proper CORS support for all deployment domains

This should resolve the product listing issues and slow loading problems in production.